# dreamhost-ddns

./: .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: ci.yml  rust.yml
binaries/linux-aarch64/: dreamhost-ddns
binaries/linux-rpi-armv7/: config.toml  dreamhost-ddns
src/: main.rs
